v18 (#56)
* abstraction of transport to allow non SN type layers to be colocated

* introduction of bridge through the cloud

* generified some model objects for use on bridge

* plx4j stuff

* subscribe done

* fallback to polling for modbus

* transport details

* predefined storage

* load generator

* test

* allow system property overrides

* threading changes to client disconnect error

* tries tree synchronization

* clientId length validation

* some sleep tweaks

* stop hooks

* tweak to network registry

* tweak to network registry

* v 18